--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,87 @@
-<form [formGroup]="submitQs" (ngSubmit)="onSubmit()">
+<div class="container text-center">
+  <form [formGroup]="submitQs" (ngSubmit)="onSubmit()">
+    <div class="qs1">
+      <h2>What do you prefer?</h2>
+      <div class="row mb-20">
+        <div class="col-6">
+          <input class="form-check-input" type="radio" formControlName="liquid" name="liquid" value="tea">
+          <a class="wrap-div card">
+            <img src="../../../assets/creater/tea.jpg">
+            <div class="titlename">
+              Tea
+            </div>
+          </a>
+        </div>
+        <div class="col-6">
+          <input class="form-check-input" type="radio" name="liquid" formControlName="liquid" value="coffee">
+          <a class="wrap-div card">
+            <img src="../../../assets/creater/Coffee.jpg">
+            <div class="titlename">
+              Coffee
+            </div>
+          </a>
+        </div>
+      </div>
+      <button type="submit" class="btn btn-primary">Skip Question</button>
+    </div>
+    <!-- <div class="form-group">
+      <label for="exampleInputEmail1">What is your favourite color?</label>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="color" formControlName="color" value="red">
+        <label class="form-check-label">
+          red
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" formControlName="color" name="color" value="green">
+        <label class="form-check-label">
+          green
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" formControlName="color" name="color" value="blue">
+        <label class="form-check-label">
+          Blue
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" formControlName="color" name="color" value="black">
+        <label class="form-check-label">
+          Black
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" formControlName="color" name="color" value="none">
+        <label class="form-check-label">
+          none of above
+        </label>
+      </div>
+    </div> -->
+    <!-- <div class="form-group">
+      <label for="exampleInputEmail1">What is her favourite fast food?</label>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="fastfood" formControlName="fastfood" value="burger">
+        <label class="form-check-label">
+          burger
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" formControlName="fastfood" name="fastfood" value="momo">
+        <label class="form-check-label">
+          Momo's
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" formControlName="fastfood" name="fastfood" value="none">
+        <label class="form-check-label">
+          none of above
+        </label>
+      </div>
+    </div> -->
+    <!-- <button type="submit" class="btn btn-primary">Submit</button> -->
+  </form>
+</div>
+<!-- <form [formGroup]="submitQs" (ngSubmit)="onSubmit()">
     <div class="form-group">
         <label for="exampleInputEmail1">What is your favourite color?</label>
         <div class="form-check">
@@ -53,13 +136,5 @@
         </label>
       </div>
   </div>
-      <!-- <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-      </div>
-      <div class="form-group form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-      </div> -->
       <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+</form> -->
