--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,10 +1,10 @@
 <div class="container text-center">
   <form [formGroup]="submitQs" (ngSubmit)="onSubmit()">
-    <div class="qs1">
+    <div class="qus1"  *ngIf="qs1">
       <h2>What do you prefer?</h2>
       <div class="row mb-20">
         <div class="col-6">
-          <input class="form-check-input" type="radio" formControlName="liquid" name="liquid" value="tea">
+          <input class="form-check-input" type="radio" formControlName="liquid" name="liquid" value="tea" (click)="onclickAnswere()">
           <a class="wrap-div card">
             <img src="../../../assets/creater/tea.jpg">
             <div class="titlename">
@@ -13,7 +13,7 @@
           </a>
         </div>
         <div class="col-6">
-          <input class="form-check-input" type="radio" name="liquid" formControlName="liquid" value="coffee">
+          <input class="form-check-input" type="radio" name="liquid" formControlName="liquid" value="coffee" (click)="onclickAnswere()">
           <a class="wrap-div card">
             <img src="../../../assets/creater/Coffee.jpg">
             <div class="titlename">
@@ -22,63 +22,62 @@
           </a>
         </div>
       </div>
-      <button type="submit" class="btn btn-primary">Skip Question</button>
+      <button class="btn btn-primary m-2" (click)="qus1()"> Skip This uestion</button>
+      <button class="btn btn-primary m-2" (click)="qus1()" *ngIf="readyToSubmit">Submit & Next</button>
+      <button class="btn btn-primary m-2" (click)="qus1()" disabled *ngIf="!readyToSubmit">Submit & Next</button>
     </div>
-    <!-- <div class="form-group">
-      <label for="exampleInputEmail1">What is your favourite color?</label>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="color" formControlName="color" value="red">
-        <label class="form-check-label">
-          red
-        </label>
+    <div class="qus2" *ngIf="qs2">
+      <h2>Do you love school life or college life?</h2>
+      <div class="row mb-20">
+          <div class="col-6">
+            <input class="form-check-input" type="radio" formControlName="life" name="life" value="school" (click)="onclickAnswere()">
+            <a routerLink="" class="wrap-div card">
+                <img src="../../../assets/creater/School-Life.jpg">
+                <div class="titlename">
+                    School life
+                </div>
+            </a>
+        </div>
+        <div class="col-6">
+          <input class="form-check-input" type="radio" formControlName="life" name="life" value="college" (click)="onclickAnswere()">
+            <a routerLink="" class="wrap-div card">
+                <img src="../../../assets/creater/collage-life.jpg">
+                <div class="titlename">
+                    college life
+                </div>
+            </a>
+        </div>
       </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" formControlName="color" name="color" value="green">
-        <label class="form-check-label">
-          green
-        </label>
+      <button class="btn btn-primary m-2" type="submit" >Skip This uestion</button>
+      <button class="btn btn-primary m-2" *ngIf="readyToSubmit">Submit & Next</button>
+      <button class="btn btn-primary m-2" disabled *ngIf="!readyToSubmit">Submit & Next</button>
+    </div>
+    <div class="qus3" *ngIf="qs3">
+      <h2>Which one will you choose?</h2>
+      <div class="row mb-20">
+        <div class="col-6">
+          <input class="form-check-input" type="radio" formControlName="place" name="place" value="beach" (click)="onclickAnswere()">
+          <a routerLink="" class="wrap-div card">
+              <img src="../../../assets/creater/Beaches.jpg">
+              <div class="titlename">
+                  beach 
+              </div>
+          </a>
       </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" formControlName="color" name="color" value="blue">
-        <label class="form-check-label">
-          Blue
-        </label>
+      <div class="col-6">
+        <input class="form-check-input" type="radio" formControlName="place" name="place" value="mountains" (click)="onclickAnswere()">
+          <a routerLink="" class="wrap-div card">
+              <img src="../../../assets/creater/Beaches.jpg">
+              <div class="titlename">
+                  mountains
+              </div>
+          </a>
       </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" formControlName="color" name="color" value="black">
-        <label class="form-check-label">
-          Black
-        </label>
       </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" formControlName="color" name="color" value="none">
-        <label class="form-check-label">
-          none of above
-        </label>
-      </div>
-    </div> -->
-    <!-- <div class="form-group">
-      <label for="exampleInputEmail1">What is her favourite fast food?</label>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="fastfood" formControlName="fastfood" value="burger">
-        <label class="form-check-label">
-          burger
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" formControlName="fastfood" name="fastfood" value="momo">
-        <label class="form-check-label">
-          Momo's
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" formControlName="fastfood" name="fastfood" value="none">
-        <label class="form-check-label">
-          none of above
-        </label>
-      </div>
-    </div> -->
-    <!-- <button type="submit" class="btn btn-primary">Submit</button> -->
+      <button class="btn btn-primary m-2" type="submit" >Skip This uestion</button>
+      <button class="btn btn-primary m-2" *ngIf="readyToSubmit">Submit & Next</button>
+      <button class="btn btn-primary m-2" disabled *ngIf="!readyToSubmit">Submit & Next</button>
+    </div>
   </form>
 </div>
 <!-- <form [formGroup]="submitQs" (ngSubmit)="onSubmit()">
