--- a/src/app/sucess/sucess.component.html
+++ b/src/app/sucess/sucess.component.html
@@ -1,2 +1,13 @@
 <!-- <h1>Copy this link and paste</h1> -->
-<button class="btn btn-primary" routerLink="../resolver">Click to copy</button>
+<div class="container text-center">
+    <div class="col-6 col-xs-12" style="display: inline-block; " >
+        <div class="card " style="background-color: beige;"  >
+            <img class="card-img-top" src="../../assets/success.jpg"  alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Your Quiz is Ready!</h5>
+              <p class="card-text">Share your quiz-link with your friends!</p>
+              <p class="card-text">They will try to guess your answers & get a score out of 10.</p>
+              <button class="btn btn-primary" routerLink="../resolver">Copy Link</button>
+        </div>
+    </div>
+</div>
