--- a/src/app/sucess/sucess.component.html
+++ b/src/app/sucess/sucess.component.html
@@ -1,2 +1,2 @@
-<!-- <h1>Copy this link and paste</h1> -->
-<button class="btn btn-primary" routerLink="../resolver">Click to copy</button>
+<input type="text" value="User input Text to copy" #userinput>
+<button (click)="copyInputMessage(userinput)" value="click to copy" >Copy from Textbox</button>
