--- a/src/app/sucess/sucess.component.html
+++ b/src/app/sucess/sucess.component.html
@@ -1,2 +1,2 @@
-<input type="text" value="User input Text to copy" #userinput>
-<button (click)="copyInputMessage(userinput)" value="click to copy" >Copy from Textbox</button>
+<input type="text" value="http://localhost:4200/resolver?id={{id}}&username={{username}}" #userinput>
+      <button (click)="copyInputMessage(userinput)" value="click to copy" >Copy from Textbox</button>
